M8 css integration, new icons, profile rework, password recovery

--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -23,11 +23,6 @@
 {
     display: none;
 }
-header.adminHeader .navbar
-{
-    background: #000!important;
-}
-
 /*! X-editable - v1.5.1
 * In-place editing with Twitter Bootstrap, jQuery UI or pure jQuery
 * http://github.com/vitalets/x-editable
@@ -1022,10 +1017,10 @@ span.removeNewImage
 {
     margin-top: 30px;
 }
-/*.searchSearchResultWrapper .profile-card, .searchRecomendationWrapper .profile-card*/
-/*{*/
-    /*width: 205px !important;*/
-/*}*/
+.searchSearchResultWrapper .profile-card, .searchRecomendationWrapper .profile-card
+{
+    width: 205px !important;
+}
 .results-content .slider-block .bx-wrapper
 {
     padding: 0 30px;
@@ -10219,14 +10214,9 @@ section.used-by {
 
 .content .category-img {
     position: relative;
-    /*left: 50%;*/
-    /*-webkit-transform: translateX(-50%);*/
-    /*-moz-transform: translateX(-50%);*/
-    /*-ms-transform: translateX(-50%);*/
-    /*-o-transform: translateX(-50%);*/
-    /*transform: translateX(-50%);*/
-    display: block;
-    margin: 0 auto;
+    left: 50%;
+    -webkit-transform: translateX(-50%);
+    transform: translateX(-50%);
     height: 173px;
 }
 
@@ -10240,16 +10230,13 @@ section.used-by {
 
 .content .options-img {
     position: relative;
-    /*left: 50%;*/
-    /*-webkit-transform: translateX(-50%);*/
-    /*-moz-transform: translateX(-50%);*/
-    /*-ms-transform: translateX(-50%);*/
-    /*-o-transform: translateX(-50%);*/
-    /*transform: translateX(-50%);*/
+    left: 50%;
+    -webkit-transform: translateX(-50%);
+    transform: translateX(-50%);
     width: 100%;
     max-width: 131px;
-    display: block;
-    margin: 0 auto 11px;
+    margin-top: 0;
+    margin-bottom: 11px;
 }
 
 .content .title-secure {
@@ -10839,7 +10826,7 @@ section.used-by {
 .price-list .edit-form{position: relative;}
 .price-list .edit-form .heading{
     padding-bottom: 10px;
-    padding-right: 286px;
+    padding-right: 294px;
 }
 .price-list .edit-form .heading .title{
     float: none !important;
@@ -11004,9 +10991,8 @@ section.used-by {
     border-radius: 21px;
     -webkit-border-radius: 21px;
     padding: 0 30px;
-    height: 21px;
+    height: 20px;
     font-size: 12px;
-    /*line-height: 18px;*/
     color: #000;
     color: rgba(0, 0, 0, .87);
     outline: none;
@@ -11235,11 +11221,10 @@ section.used-by {
 .pagination a .button {
     display: inline-block;
     font-family: LatoRegular;
-    font-size: 13px;
+    font-size: 14px;
     color: #424242;
     height: 26px;
     width: 26px;
-    line-height: 21px;
     margin-left: 4px;
     margin-right: 4px;
 }
@@ -11652,14 +11637,6 @@ section.used-by {
             perspective: 750px;
 }
 
-.MSIE .card-flip{-webkit-perspective: none;perspective: none;}
-.MSIE .card-flip .flipper{
-    -webkit-transition: none;
-    transition: none;
-    -webkit-transform-style: flat;
-            transform-style: flat;
-}
-
 .card-flip:hover .flipper, .card-flip.hover .flipper {
     -webkit-transform: rotateY(180deg);
     transform: rotateY(180deg);
@@ -11724,16 +11701,6 @@ section.used-by {
     transition: ease all 0.25s;
 }
 
-.MSIE .card-flip .back,
-.MSIE .card-flip .front,
-.MSIE .card-flip:hover .flipper,
-.MSIE .card-flip.hover .flipper{
-    -webkit-transform: none;
-            transform: none;
-    -webkit-transition: none;
-    transition: none;
-}
-
 .card-flip .back .panel-text {
     position: absolute;
     top: 0;
@@ -11781,10 +11748,6 @@ section.used-by {
     -webkit-transform: translateX(-50%);
     transform: translateX(-50%);
     bottom: 30px;
-}
-
-.panel-text.controls .button-gradient .btn{
-    padding-top: 5px;
 }
 
 .panel-text .text {
@@ -11947,7 +11910,7 @@ section.used-by {
     border: none;
     outline: none!important;
     border-radius: 19px;
-    padding: 0 11px 1px;
+    padding: 11px;
     margin-right: 14px;
     font-family: LatoRegular;
     font-size: 14px;
@@ -11969,7 +11932,6 @@ section.used-by {
     height: 33px;
     font-family: LatoBold;
     font-size: 14px;
-    padding-top: 5px;
 }
 
 #carousel {
@@ -12132,10 +12094,6 @@ section.used-by {
     line-height: 23px;
     border-radius: 6px;
     -webkit-border-radius: 6px;
-}
-#freeQuoteModal .select2-container--open .select2-selection__rendered{
-    border-radius: 6px 6px 0 0;
-    -webkit-border-radius: 6px 6px 0 0;
 }
 .free-quote-modal .select2-container--default .select2-selection--single{
     height: 24px;
@@ -12331,8 +12289,8 @@ section.used-by {
 
     .price-list .holder {
         height: auto;
-        margin-right: 9px;
-        width: calc(50% - 9px);
+        margin-right: 4px;
+        width: calc(50% - 4px);
         max-width: 370px;
     }
 
@@ -12342,7 +12300,7 @@ section.used-by {
     }
 
     .price-list .edit-form .holder{
-        height: 248px;
+        height: 364px;
     }
     .edit-form .options-list{
         top: -37px;
@@ -12371,10 +12329,22 @@ section.used-by {
         padding-bottom: 0;
     }
 
+    /*.price-list .info {*/
+    /*margin-left: 0;*/
+    /*margin-top: 8px;*/
+    /*height: auto;*/
+    /*padding-bottom: 74px;*/
+    /*width: 100%;*/
+    /*}*/
+
+    /*.price-list .info .box{*/
+    /*height: auto;*/
+    /*}*/
+
     .price-list .info{
+        width: 214px;
         margin-left: 6px;
         height: 247px;
-        width: 218px;
     }
 
     .price-list .item .row{padding: 0 0 75px;}
@@ -12447,7 +12417,7 @@ section.used-by {
     }
 
     .media-content .bx-wrapper{height: 300px;}
-    .price-list .edit-form .holder{height: 259px;}
+    .price-list .edit-form .holder{height: 282px;}
     .price-list .info {
         margin-left: 0;
         margin-top: 8px;
@@ -12670,6 +12640,7 @@ section.used-by {
     }
 
     .price-list .holder {
+        /*width: 100%;*/
         height: auto;
         margin-bottom: 8px;
     }
@@ -12743,8 +12714,13 @@ section.used-by {
     }
 
     .price-list .video .name {
+        /*display: inline-block!important;*/
         bottom: -26px;
     }
+
+    /*.price-list .video .glyphicon {*/
+    /*display: inline-block!important;*/
+    /*}*/
 
     .price-list .video .name .name-text {
         margin-top: 3px;
@@ -12777,11 +12753,11 @@ section.used-by {
     .media-content.video .btn-prev{right: -8%;}
     .media-content.video .btn-next{left: -8%;}
 
-    .price-list .edit-form .holder,
-    .price-list .edit-form .holder.video{
+    .price-list .edit-form .holder{
         height: auto;
-        min-height: 300px;
+        min-height: 320px;
     }
+    .price-list .edit-form .holder.video{width: 100%;}
     .price-list .edit-form .controls.add{
         left: 50%;
         right: auto;
@@ -12790,6 +12766,7 @@ section.used-by {
     .price-list .edit-form .heading{padding-right: 180px;}
     .profile-info .info .set-box-categories{
         top: 0;
+        /*right: -22px;*/
     }
     .profile-info .set-avatar,
     .profile-info .info .set-categories{font-size: 14px;}
@@ -12831,10 +12808,9 @@ section.used-by {
     .recovery-form .ico{right: 7px;}
 }
 
-/*Screens with width < 679px*/
-@media (max-width: 679px) {
-    .price-list .holder,
-    .price-list .edit-form .holder.video{
+/*Screens with width < 709px*/
+@media (max-width: 709px) {
+    .price-list .holder{
         max-width: 100%;
         float: none;
         width: 100%;
@@ -12997,6 +12973,7 @@ section.used-by {
     }
 
     .price-list .video .name {
+        /*display: inline-block!important;*/
         bottom: -26px;
     }
 
@@ -13199,7 +13176,7 @@ only screen and (min-resolution: 2dppx) {
         background: url('../assets/images/delete_blue@2x.png') no-repeat;
         background-size: 18px 17px;
     }
-    .edit-form .options-list .btn-option.check .ico{
+    .edit-form .options-list .btn-option.remove .ico{
         background: url('../assets/images/done-blue@2x.png') no-repeat;
         background-size: 18px 17px;
     }
@@ -13218,11 +13195,6 @@ only screen and (min-resolution: 2dppx) {
     .custom-checkbox label:after{
         background: url('../assets/images/yes@2x.png') no-repeat;
         background-size: 17px 17px;
-    }
-    .free-quote-modal .modal-content .close > span,
-    .modal.add-entry .modal-content .close > span{
-        background: url('../assets/images/close@2x.png');
-        background-size: 12px 12px;
     }
 
 }
@@ -13420,10 +13392,10 @@ span.removeNewImage
 {
     margin-top: 30px;
 }
-/*.searchSearchResultWrapper .profile-card, .searchRecomendationWrapper .profile-card*/
-/*{*/
-    /*width: 205px !important;*/
-/*}*/
+.searchSearchResultWrapper .profile-card, .searchRecomendationWrapper .profile-card
+{
+    width: 205px !important;
+}
 .results-content .slider-block .bx-wrapper
 {
     padding: 0 30px;
