--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/userSection.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/userSection.html.twig
@@ -12,7 +12,7 @@
     <span id="slug" class="hidden">{{ artist.slug }}</span>
     <section class="profile-info container">
         <div class="avatar">
-            <img class="avatar" src="{{ artist.user.avatar }}" alt="Avatar">
+            <img class="avatarImg" src="{{ artist.user.avatar }}" alt="Avatar">
         </div>
         <div class="info">
             <div class="username">{{ artist.name }}</div>
