--- a/app/Resources/views/blocks/menu.html.twig
+++ b/app/Resources/views/blocks/menu.html.twig
@@ -1,4 +1,5 @@
 <ul class="nav nav-sidebar">
     <li class="active"><a href="{{ path('admin_dashboard_recommend') }}">Recommend <span class="sr-only">(current)</span></a></li>
     <li><a href="{{ path('admin_dashboard_spotlight') }}">Spotlight</a></li>
+    <li><a href="{{ path('admin_users_list') }}">Users</a></li>
 </ul>
