added default image for profile background

--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/userSection.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/userSection.html.twig
@@ -4,7 +4,7 @@
         <div class="background-stripe"></div>
     </div>
 {% else %}
-    <div class="header-background" style="background-image: url({{ asset(artist.user.background) }})">
+    <div class="header-background" style="background-image: url({{ asset('assets/images/band-bg.png') }})">
         <div class="background-stripe"></div>
     </div>
 {% endif %}
