--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/userSectionEdit.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/userSectionEdit.html.twig
@@ -20,7 +20,7 @@
             {#</div>#}
         </div>
     {% else %}
-        <div class="header-background edit" style="background-image: url({{ asset(artist.user.background) }})">
+        <div class="header-background edit" style="background-image: url({{ asset('assets/images/band-bg.png') }})">
             <span id="bgImageSrc" class="hidden">{{ asset(artist.user.background) }}</span>
             <div class="background-stripe"></div>
             <div id="editBackground" class="set-box set-background">
