fix slider search

--- a/src/Acted/LegalDocsBundle/Resources/public/css/custom.css
+++ b/src/Acted/LegalDocsBundle/Resources/public/css/custom.css
@@ -191,10 +191,10 @@ span.removeNewImage
 {
     margin-top: 30px;
 }
-.searchSearchResultWrapper .profile-card, .searchRecomendationWrapper .profile-card
-{
-    width: 205px !important;
-}
+/*.searchSearchResultWrapper .profile-card, .searchRecomendationWrapper .profile-card*/
+/*{*/
+    /*width: 205px !important;*/
+/*}*/
 .results-content .slider-block .bx-wrapper
 {
     padding: 0 30px;
