--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/userSectionEdit.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/userSectionEdit.html.twig
@@ -23,7 +23,7 @@
         <div class="header-background edit" style="background-image: url({{ asset('assets/images/band-bg.png') }})">
             <span id="bgImageSrc" class="hidden">{{ asset(artist.user.background) }}</span>
             <div class="background-stripe"></div>
-            <div id="editBackground" class="set-box set-background">
+            <div id="editBackground" class="set-box">
                 <button button="button" href="#" data-toggle="modal" data-target="#changeBgModal" class="set-background">
                     <i class="ico"></i>
                 </button>
@@ -48,7 +48,7 @@
     {% if is_granted('EDIT', artist) or is_granted('ROLE_ADMIN') %}
         <div class="avatar avatarEditable">
             <img class="avatarImg" src="{{ artist.user.avatar }}" alt="Avatar">
-            <div id="editAvatar" class="set-avatar set-avatar-box">
+            <div id="editAvatar" class="set-avatar-box">
                 <button button="button" class="set-avatar" data-toggle="modal" data-target="#changeImageModal">
                     <i class="ico"></i>
                 </button>
@@ -71,7 +71,7 @@
                     </li>
                 {% endfor %}
             </ul>
-            {% if is_granted('EDIT', artist) %}
+            {% if is_granted('EDIT', artist) or is_granted('ROLE_ADMIN') %}
                 <div class="set-box-categories">
                     <button button="button" data-toggle="modal" id="editCategories" data-target="#categotiesModal" class="set-categories">
                         <i class="ico"></i>
