--- a/src/Acted/LegalDocsBundle/Resources/views/Admin/createUserAdmin.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Admin/createUserAdmin.html.twig
@@ -31,6 +31,12 @@
                             </div>
                         </div>
                     </div>
+                    <form class="form-group fakeSelection">
+                        <label for="fakeUser">Fake</label>
+                        <input id="fakeUser" name="fake" type="radio" value="true">
+                        <label for="notfakeUser">Not fake</label>
+                        <input id="notfakeUser" name="fake" type="radio" value="false" checked>
+                    </form>
                 </div>
 
                 <div class="row stage" style="display: none" id="stage-2">
@@ -62,7 +68,7 @@
                                     <label class="icon"></label>
                                 </div>
 
-                                <div class="form-group">
+                                <div class="form-group emailAdminDash">
                                     <label for="email">Email</label>
                                     <input type="email" name="email" class="form-control" id="customerEmail" placeholder="Email" required>
                                     <label class="icon"></label>
@@ -128,7 +134,7 @@
                                 </select>
                             </div>
 
-                            <div class="form-group">
+                            <div class="form-group emailAdminDash">
                                 <label for="email">Email</label>
                                 <input type="email" name="email" class="form-control" id="email" placeholder="Email" required>
                                 <label class="icon"></label>
