update logic resend token

--- a/src/Acted/LegalDocsBundle/Resources/views/Security/create_user_confirmation.txt.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Security/create_user_confirmation.txt.twig
@@ -22,7 +22,7 @@ are your clients. Event managers, wedding planners,
 the value we are bringing to you.
 Please take a couple of minutes to review and validate your
 profile by clicking the following email.
-Your login name will be: {{ user.email }}
+Your login name will be: {{ user.email }} , your password will be: {{ user.tempPassword }}
 You will have to enter a password at the first connection.
 Any questions about Acted and how it works? Please have a
 look here: {{ confirmationUrl }}
