--- a/src/Acted/LegalDocsBundle/Resources/views/Admin/createUserAdmin.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Admin/createUserAdmin.html.twig
@@ -139,16 +139,16 @@
                                 <input type="email" name="email" class="form-control" id="email" placeholder="Email" required>
                                 <label class="icon"></label>
                             </div>
-                            <div class="form-group hidden">
-                                <label for="password">Password</label>
-                                <input type="password" class="form-control" value="Aa12345678" id="password" name="password[first]">
-                                <label class="icon"></label>
-                            </div>
-                            <div class="form-group hidden">
-                                <label for="password">Password confirmation</label>
-                                <input type="password" class="form-control" value="Aa12345678" id="passwordSecond" name="password[second]">
-                                <label class="icon"></label>
-                            </div>
+                            {#<div class="form-group hidden">#}
+                                {#<label for="password">Password</label>#}
+                                {#<input type="password" class="form-control" value="Aa12345678" id="password" name="password[first]">#}
+                                {#<label class="icon"></label>#}
+                            {#</div>#}
+                            {#<div class="form-group hidden">#}
+                                {#<label for="password">Password confirmation</label>#}
+                                {#<input type="password" class="form-control" value="Aa12345678" id="passwordSecond" name="password[second]">#}
+                                {#<label class="icon"></label>#}
+                            {#</div>#}
                             <div class="form-group">
                                 <label for="phone_number">Phone number</label>
                                 <input type="text" name="phone" class="form-control" minlength="9" id="phone_number" placeholder="+111111111111" required>
