add homepage link

--- a/src/Acted/LegalDocsBundle/Resources/views/Security/create_user_confirmation.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Security/create_user_confirmation.html.twig
@@ -29,7 +29,7 @@ If the link doesn't work, your login name will be: <b>{{ user.email }}</b> , and
 <br>
 You will have to enter a new password at the first connection.
 <br><br>
-Any questions about Acted and how it works? Please have a look here: <a href="{{ confirmationUrl }}">Acted marketplace</a> 
+Any questions about Acted and how it works? Please have a look here: <a href="{{ homepageUrl }}">Acted marketplace</a>
 <br><br>
 Please do not hesitate to contact us per email (marketing (at) acted.co ) and share your feedback. Always happy to
 have a chat and understand how we can improve your experience on Acted. 
