--- a/src/Acted/LegalDocsBundle/Resources/views/Default/homeInstruction.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/homeInstruction.html.twig
@@ -5,11 +5,9 @@
     <div class="icon icon-mobile hidden-lg hidden-md"></div>
 </div>
 
-
-<section class="content">
+<section class="content" id="how-it-works">
     <div class="container hideme">
         <h2 class="title">HOW IT WORKS</h2>
-
         <div class="row">
             <div class="col-xs-6">
                 <img src="assets/images/artist.png" alt="" class="category-img">
