add showing error if change email exist

--- a/src/Acted/LegalDocsBundle/Resources/views/Admin/usersList.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Admin/usersList.html.twig
@@ -61,6 +61,7 @@
                             <td>client</td>
                         {% endif %}
                         <td>
+                            <p class="error {{ 'error_' ~ user.id }}"></p>
                             <span class="userEmail">
                                 {{ user.email }}
                             </span>
